# DFAsAndCountableOrders

./: ReadMe.md
code/: CHANGELOG.md  DFA2RCO.cabal
code/app/: Main.hs
code/src/: DFA.hs  DFA2RCO.hs  Examples.hs  Finite.hs  MyPrelude.hs  RCO.hs  RCOEqns.hs
