cabal-version:      2.4
name:               DFA2RCO
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             CéP
maintainer:         c.pradic@swansea.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Finite,
                      DFA,
                      RCO,
                      RCOEqns,
                      DFA2RCO,
                      Examples

    -- Modules included in this library but not exported.
    other-modules:    MyPrelude

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable DFA2RCO
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        DFA2RCO

    hs-source-dirs:   app
    default-language: Haskell2010
